--- a/index.css
+++ b/index.css
@@ -1166,6 +1166,13 @@ p {
     .mobile-break {
         display: block;
     }
+
+    /* Prevent Auto-Zoom on Mobile */
+    input,
+    select,
+    textarea {
+        font-size: 16px !important;
+    }
 }
 
 @media (max-width: 480px) {
